--- a/A-3/index.html
+++ b/A-3/index.html
@@ -13,12 +13,58 @@
             <div class="logo">
                 <a href="#"><img src="images/logo.png" alt="logo"></a>
             </div>
-            <nav class="menu">메뉴</nav>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">| 강원천문대 |</a>
+                        <ul class="submenu">
+                            <li><a href="#">천문대소개</a></li>
+                            <li><a href="#">인사말</a></li>
+                            <li><a href="#">오시는길</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">| 이용안내 |</a>
+                        <ul class="submenu">
+                            <li><a href="#">프로그램</a></li>
+                            <li><a href="#">관람시간표</a></li>
+                            <li><a href="#">이달의 별자리</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">| 천문대예약 |</a>
+                        <ul class="submenu">
+                            <li><a href="#">예약하기</a></li>
+                            <li><a href="#">예약확인</a></li>
+                            <li><a href="#">예약취소</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">| 커뮤니티 |</a>
+                        <ul class="submenu">
+                            <li><a href="#">공지사항</a></li>
+                            <li><a href="#">방문후기</a></li>
+                            <li><a href="#">자유게시판</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </header>
-        <section id="slide">슬라이드</section>
+        <section id="slide">
+            <ul class="imglist">
+                <li><a href="#">
+                    <h2>강원천문대 홈페이지 새단장</h2>
+                    <img src="images/img1.jpg" alt="img1">
+                </a></li>
+                <li><a href="#">
+                    <h2>이달의 별자리 특강</h2>
+                    <img src="images/img2.jpg" alt="img2">
+                </a></li>
+                <li><a href="#">
+                    <h2>별사진 공모전 개회</h2>
+                    <img src="images/img3.jpg" alt="img3">
+                </a></li>
+            </ul>
+        </section>
         <section id="contents" class="clearfix">
             <div class="notice">
-                공지사항
+                
             </div>
             <div class="banner">
                 배너
@@ -35,5 +81,7 @@
             </div>
         </footer>
     </div>
+    <script src="script/jquery-1.12.3.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
