--- a/A-3/index.html
+++ b/A-3/index.html
@@ -8,6 +8,13 @@
     <title>강원천문대</title>
 </head>
 <body>
+    <div id="modal">
+        <div class="popup">
+            <h2>제목: 하늘과 바람과 별과 詩 사생대회</h2>
+            <div class="m-cont">내용: 윤동주 시인의 시집 <하늘과 바람과 별과 詩> 출간 72주년을 맞이하여 천문대에서 개최하는 사생대회가 열립니다. 별 하나에 추억, 사랑, 쓸쓸함, 동경 그리고 시와, 어머니를 그렸던 시인처럼 별같은 마음을 가진 분들은 참여해주세요.</div>
+            <input type="button" value="닫기">
+        </div>
+    </div>
     <div id="wrap">
         <header id="header" class="clearfix">
             <div class="logo">
@@ -63,21 +70,53 @@
             </ul>
         </section>
         <section id="contents" class="clearfix">
-            <div class="notice">
-                
+            <div class="con1">
+                <div class="tab-btn">
+                    <ul>
+                        <li class="on"><a href="#">공지사항</a></li>
+                        <li><a href="#">갤러리</a></li>
+                    </ul>
+                </div>
+                <div class="tab-cont">
+                    <div class="notice">
+                        <ul>
+                            <li><a href="#">하늘과 바람과 별과 詩 사생대회<span>2020.11.19</span></a></a></li>
+                            <li><a href="#">하계기간 야간 연장운영합니다.<span>2020.11.19</span></a></li>
+                            <li><a href="#">청소년 대상 천문교실 안내<span>2020.11.19</span></a></li>
+                            <li><a href="#">제1회 별사진 공모전 개회됩니다.<span>2020.11.19</span></a></li>
+                        </ul>
+                    </div>
+                    <div class="gallery">
+                        <ul>
+                            <li><a href="#"><img src="images/icon1.jpg" alt="icon1"><span>이미지1</span></a></li>
+                            <li><a href="#"><img src="images/icon2.jpg" alt="icon2"><span>이미지2</span></a></li>
+                            <li><a href="#"><img src="images/icon3.jpg" alt="icon3"><span>이미지3</span></a></li>
+                        </ul> 
+                    </div>
+                </div>
             </div>
-            <div class="banner">
-                배너
+            <div class="con2">
+                <a href="#"><img src="images/banner.jpg" alt="banner">
+                <h2>강원천문대!</h2></a>
             </div>
-            <div class="shortcut">
-                바로가기
+            <div class="con3">
+                <a href="#"><img src="images/direct.jpg" alt="shortcut">
+                <h2>바로가기</h2></a>
             </div>
         </section>
         <footer id="footer" class="clearfix">
-            <div class="btlogo">로고</div>
+            <div class="btlogo">
+                <a href="#"><img src="images/btlogo.png" alt="logo"></a>
+            </div>
             <div class="btwrap">
-                <div class="btmenu">하단메뉴</div>
-                <div class="copyright">Copyright</div>
+                <div class="btmenu">
+                    <ul class="clearfix">
+                        <li><a href="#">하단메뉴1</a></li>
+                        <li><a href="#">하단메뉴2</a></li>
+                        <li><a href="#">하단메뉴3</a></li>
+                    </ul>
+                </div>
+                <div class="copyright">COPYRIGHTⓒ by WEBDESIGN. ALL RIGHTS RESERVED</div>
             </div>
         </footer>
     </div>
