--- a/A-1/index.html
+++ b/A-1/index.html
@@ -72,31 +72,31 @@
         </ul>
     </section>
     <section id="contents">
-        <div class="notice">
-            <ul class="tabmenu">
-                <li class="active">
-                    <a href="#">공지사항</a>
-                    <ul class="ncontents">
-                        <li><a href="#">신규회원 대상 할인 이벤트 안내<span>2020.11.23</span></a></li>
-                        <li><a href="#">S/S 시즌 신규 의류 신상품 안내<span>2020.11.23</span></a></li>
-                        <li><a href="#">반품/환불 규정에 대해 알려드립니다<span>2020.11.23</span></a></li>
-                        <li><a href="#">3월 재입고 품목을 알려드립니다<span>2020.11.23</span></a></li>
-                    </ul>           
-                </li>
-                <li>
-                    <a href="#">갤러리</a>
-                    <ul class="gcontents">
-                        <li><a href="#"><img src="images/icon1.jpg" alt="icon1"></a></li>
-                        <li><a href="#"><img src="images/icon2.jpg" alt="icon2"></a></li>
-                        <li><a href="#"><img src="images/icon3.jpg" alt="icon3"></a></li>
-                    </ul>
-                </li>
-            </ul>
+        <div class="con1">
+            <div class="tab-btn">
+                <ul class="clearfix">
+                    <li class="on"><a href="#">공지사항</a></li>
+                    <li><a href="#">갤러리</a></li>
+                </ul>
+            </div>
+            <div class="tab-cont">
+                <ul class="notice">
+                    <li><a href="#">신규회원 대상 할인 이벤트 안내<span>2020.11.23</span></a></li>
+                    <li><a href="#">S/S 시즌 신규 의류 신상품 안내<span>2020.11.23</span></a></li>
+                    <li><a href="#">반품/환불 규정에 대해 알려드립니다<span>2020.11.23</span></a></li>
+                    <li><a href="#">3월 재입고 품목을 알려드립니다<span>2020.11.23</span></a></li>
+                    </ul> 
+                <ul class="gallery">
+                    <li><a href="#"><img src="images/icon1.jpg" alt="icon1"></a></li>
+                    <li><a href="#"><img src="images/icon2.jpg" alt="icon2"></a></li>
+                    <li><a href="#"><img src="images/icon3.jpg" alt="icon3"></a></li>
+                </ul>
+            </div>
         </div>
-        <div class="banner">
+        <div class="con2">
             배너
         </div>
-        <div class="shortcut">
+        <div class="con3">
             바로가기
         </div>
     </section>
