--- a/A-1/index.html
+++ b/A-1/index.html
@@ -85,30 +85,37 @@
                     <li><a href="#">S/S 시즌 신규 의류 신상품 안내<span>2020.11.23</span></a></li>
                     <li><a href="#">반품/환불 규정에 대해 알려드립니다<span>2020.11.23</span></a></li>
                     <li><a href="#">3월 재입고 품목을 알려드립니다<span>2020.11.23</span></a></li>
-                    </ul> 
+                </ul> 
                 <ul class="gallery">
-                    <li><a href="#"><img src="images/icon1.jpg" alt="icon1"></a></li>
-                    <li><a href="#"><img src="images/icon2.jpg" alt="icon2"></a></li>
-                    <li><a href="#"><img src="images/icon3.jpg" alt="icon3"></a></li>
+                    <li><a href="#"><img src="images/icon1.jpg" alt="icon1"><span>이미지1</span></a></li>
+                    <li><a href="#"><img src="images/icon2.jpg" alt="icon2"><span>이미지1</span></a></li>
+                    <li><a href="#"><img src="images/icon3.jpg" alt="icon3"><span>이미지1</span></a></li>
                 </ul>
             </div>
         </div>
         <div class="con2">
-            배너
+            <a href="#"><img src="images/banner.jpg" alt="banner">
+            <h2>배너</h2></a>
         </div>
         <div class="con3">
-            바로가기
+            <a href="#"><img src="images/direct.jpg" alt="shortcut">
+            <h2>바로가기</h2></a>
         </div>
     </section>
     <footer id="footer">
         <div class="btlogo">
-            로고
+            <a href="#"><img src="images/footerLogo.png" alt="btlogo"></a>
         </div>
         <div class="copyright">
-            copyright
+            <h3>COPYRIGHTⓒ by WEBDESIGN. ALL RIGHTS RESERVED</h3>
         </div>
         <div class="sns">
-            sns
+            <span>SNS</span>
+            <ul class="clearfix">
+                <li><a href="#"><img src="images/sns1.jpg" alt="sns1"></a></li>
+                <li><a href="#"><img src="images/sns2.jpg" alt="sns2"></a></li>
+                <li><a href="#"><img src="images/sns3.jpg" alt="sns3"></a></li>
+            </ul>
         </div>
     </footer>
     <script src="script/jquery-1.12.3.js"></script>
