--- a/A-1/index.html
+++ b/A-1/index.html
@@ -8,6 +8,13 @@
     <title>JUST 쇼핑몰</title>
 </head>
 <body>
+    <div id="modal">
+        <div class="popup">
+            <h2>제목 : 신규회원 대상 이벤트 안내</h2>
+            <span>내용: 즐거운 쇼핑 환경을 위해 항상 노력하는 JUST 쇼핑몰입니다. 고객님들께 한 단계 더 나아가 보답하는 ON쇼핑몰이 되고자신규회원 대상 10% 할인 이벤트를 실시하고 있습니다. 웹과 모바일에서 모두 이용 가능하며, 수준 높은 서비스를 위해 앞으로도 꾸준히 노력할 것을 약속드립니다.</span>
+            <input type="button" value="닫기">
+        </div>
+    </div>
     <header id="header" class="clearfix">
         <div class="logo">
             <a href="#"><img src="images/logo.png" alt="logo"></a>
