--- a/C-1/index.html
+++ b/C-1/index.html
@@ -8,8 +8,41 @@
 <body>
     <div id="wrap" class="clearfix">
         <header id="header">
-            <div class="logo">로고</div>
-            <nav class="menu">메뉴</nav>
+            <div class="logo">
+                <a href="#"><img src="images/logo.png" alt="logo"></a>
+            </div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">이용방법</a>
+                        <ul class="submenu">
+                            <li><a href="#">이용방법</a></li>
+                            <li><a href="#">이용시간</a></li>
+                            <li><a href="#">이용요금</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">이벤트정보</a>
+                        <ul class="submenu">
+                            <li><a href="#">현장이벤트</a></li>
+                            <li><a href="#">온라인이벤트</a></li>
+                            <li><a href="#">이벤트예약</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">프로그램</a>
+                        <ul class="submenu">
+                            <li><a href="#">프로그램안내</a></li>
+                            <li><a href="#">온라인예약</a></li>
+                            <li><a href="#">단체예약상담</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">고객센터</a>
+                        <ul class="submenu">
+                            <li><a href="#">공지사항</a></li>
+                            <li><a href="#">자주묻는질문</a></li>
+                            <li><a href="#">자료실</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <div id="body-wrap">
             <section id="slide">슬라이드</section>
