--- a/C-1/index.html
+++ b/C-1/index.html
@@ -45,7 +45,19 @@
             </nav>
         </header>
         <div id="body-wrap">
-            <section id="slide">슬라이드</section>
+            <section id="slide">
+                <ul class="img-list">
+                    <li>
+                        <a href=""><img src="images/img1.jpg" alt="img1"><h2>해운대빛축제1</h2></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="images/img2.jpg" alt="img2"><h2>해운대빛축제1</h2></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="images/img3.jpg" alt="img3"><h2>해운대빛축제1</h2></a>
+                    </li>
+                </ul>
+            </section>
             <section id="contents">
                 <div class="con1">공지사항</div>
                 <div class="con2">배너</div>
@@ -60,5 +72,7 @@
             </footer>
         </div>
     </div>
+    <script src="script/jquery-1.12.3.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
