--- a/C-1/index.html
+++ b/C-1/index.html
@@ -6,6 +6,13 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+    <div id="modal">
+        <div class="popup">
+            <h3>제목: 해변에서 펼쳐지는 노래공연</h3>
+            <div>내용: 빛축제의 모든 공연과 전시정보를 한눈에 볼 수 있습니다. 빛축제 관련 공연과 캘린더 배포, 자전거 투어 행사, 바다 야경 명소, 빛나는 해변의 다리 등 자연환경을 살린 아름다운 해변에서의 빛축제 정보를 안내해드립니다.</div>
+            <input type="button" value="닫기">
+        </div>
+    </div>
     <div id="wrap" class="clearfix">
         <header id="header">
             <div class="logo">
@@ -58,16 +65,54 @@
                     </li>
                 </ul>
             </section>
-            <section id="contents">
-                <div class="con1">공지사항</div>
-                <div class="con2">배너</div>
-                <div class="con3">바로가기</div>
+            <section id="contents" class="clearfix">
+                <div class="con1">
+                    <div class="tab-btn">
+                        <ul class="clearfix">
+                            <li class="n-btn on"><a href="#">공지사항</a></li>
+                            <li class="g-btn"><a href="#">갤러리</a></li>
+                        </ul>
+                    </div>
+                    <div class="notice">
+                        <ul>
+                            <li><a href="#">해변에서 펼쳐지는 노래공연<span>2020.11.09</span></a></li>
+                            <li><a href="#">바다의 야경과 빛공연 관람하기	<span>2020.11.09</span></a></li>
+                            <li><a href="#">불꽃놀이 이벤트를 신청하세요<span>2020.11.09</span></a></li>
+                            <li><a href="#">빛축제 단체관람 안내<span>2020.11.09</span></a></li>
+                        </ul>
+                    </div>
+                    <div class="gallery">
+                        <ul>
+                            <li><a href="#"><img src="images/icon1.jpg" alt="icon1"><span>icon1</span></a></li>
+                            <li><a href="#"><img src="images/icon2.jpg" alt="icon2"><span>icon2</span></a></li>
+                            <li><a href="#"><img src="images/icon3.jpg" alt="icon3"><span>icon3</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="con2">
+                    <div class="banner">
+                        <a href="#"><img src="images/banner.jpg" alt="banner"><h2>배너</h2></a>
+                    </div>
+                </div>
+                <div class="con3">
+                    <div class="shortcut">
+                        <a href="#"><img src="images/direct.jpg" alt="shortcut"><h2>바로가기</h2></a>
+                    </div>
+                </div>
             </section>
             <footer id="footer">
-                <div class="btlogo">로고</div>
+                <div class="btlogo">
+                    <a href="#"><img src="images/footerLogo.png" alt="btlogo"></a>
+                </div>
                 <div class="footer-wrap">
-                    <nav class="btmenu">하단메뉴</nav>
-                    <div class="copyright">Copyright</div>
+                    <nav class="btmenu">
+                        <ul>
+                            <li><a href="#">하단메뉴1</a></li>
+                            <li><a href="#">하단메뉴2</a></li>
+                            <li><a href="#">하단메뉴3</a></li>
+                        </ul>
+                    </nav>
+                    <div class="copyright">COPYRIGHTⓒ by WEBDESIGN. ALL RIGHTS RESERVED</div>
                 </div>
             </footer>
         </div>
