B-2 이미지 슬라이드 작업중

--- a/C-3/index.html
+++ b/C-3/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="bt-wrap">
                     <nav class="bt-menu">
-                        <ul>
+                        <ul class="clearfix">
                             <li><a href="#">하단메뉴1</a></li>
                             <li><a href="#">하단메뉴2</a></li>
                             <li><a href="#">하단메뉴3</a></li>
