--- a/B-2/index.html
+++ b/B-2/index.html
@@ -64,10 +64,10 @@
             <div class="con1">
                 <div class="btn">공지사항</div>
                 <ul class="notice">
-                    <li><a href="#"><div>대한투어 공지사항1</div><span>2020.01.01</span></a></li>
-                    <li><a href="#"><div>대한투어 공지사항2</div><span>2020.01.01</span></a></li>
-                    <li><a href="#"><div>대한투어 공지사항3</div><span>2020.01.01</span></a></li>
-                    <li><a href="#"><div>대한투어 공지사항4</div><span>2020.01.01</span></a></li>
+                    <li><a href="#"><div>상반기 신입/경력 사원 채용 공고</div><span>2020.01.01</span></a></li>
+                    <li><a href="#"><div>건설의 날 기념 행사를 안내해드립니다</div><span>2020.01.01</span></a></li>
+                    <li><a href="#"><div>대학생 대상 건설현장 탐방기</div><span>2020.01.01</span></a></li>
+                    <li><a href="#"><div>대유진건설, 시공평가 순위 상위 5위 달성</div><span>2020.01.01</span></a></li>
                 </ul>
             </div>
             <div class="con2">
