--- a/상하이미지슬라이드 소스/index.html
+++ b/상하이미지슬라이드 소스/index.html
@@ -11,9 +11,9 @@
     <div id="wrap">
         <section id="slide">
             <ul class="imglist">
-                <li><a href="#"><img src="images/img01.jpg" alt="img01"><h2>이달의 소녀 츄</h2></a></li>
-                <li><a href="#"><img src="images/img02.jpg" alt="img02"><h2>브레이브걸스</h2></a></li>
-                <li><a href="#"><img src="images/img03.jpg" alt="img03"><h2>아이즈원</h2></a></li>
+                <li><a href="#"><img src="images/img01.jpg" alt="img01"><h2>슬라이드1</h2></a></li>
+                <li><a href="#"><img src="images/img02.jpg" alt="img02"><h2>슬라이드2</h2></a></li>
+                <li><a href="#"><img src="images/img03.jpg" alt="img03"><h2>슬라이드3</h2></a></li>
             </ul>
         </section>
     </div>
