--- a/B-1/index.html
+++ b/B-1/index.html
@@ -15,43 +15,45 @@
     </div>
     <div id="wrap">
         <header class="clearfix">
-            <div class="logo">
-                <a href="#"><img src="images/logo.png" alt="logo"></a>
+            <div class="h-wrap">
+                <div class="logo">
+                    <a href="#"><img src="images/logo.png" alt="logo"></a>
+                </div>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">개인</a>
+                            <ul class="submenu">
+                                <li><a href="#">조회</a></li>
+                                <li><a href="#">이체</a></li>
+                                <li><a href="#">공과금</a></li>
+                                <li><a href="#">예금/신탁</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">기업</a>
+                            <ul class="submenu">
+                                <li><a href="#">조회</a></li>
+                                <li><a href="#">이체</a></li>
+                                <li><a href="#">전자결재</a></li>
+                                <li><a href="#">수표/어음</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">금융상품</a>
+                            <ul class="submenu">
+                                <li><a href="#">저축상품</a></li>
+                                <li><a href="#">대출상품</a></li>
+                                <li><a href="#">투자상품</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">카드</a>
+                            <ul class="submenu">
+                                <li><a href="#">카드 정보</a></li>
+                                <li><a href="#">카드 신청</a></li>
+                                <li><a href="#">이용내역조회</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">개인</a>
-                        <ul class="submenu">
-                            <li><a href="#">조회</a></li>
-                            <li><a href="#">이체</a></li>
-                            <li><a href="#">공과금</a></li>
-                            <li><a href="#">예금/신탁</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">기업</a>
-                        <ul class="submenu">
-                            <li><a href="#">조회</a></li>
-                            <li><a href="#">이체</a></li>
-                            <li><a href="#">전자결재</a></li>
-                            <li><a href="#">수표/어음</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">금융상품</a>
-                        <ul class="submenu">
-                            <li><a href="#">저축상품</a></li>
-                            <li><a href="#">대출상품</a></li>
-                            <li><a href="#">투자상품</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">카드</a>
-                        <ul class="submenu">
-                            <li><a href="#">카드 정보</a></li>
-                            <li><a href="#">카드 신청</a></li>
-                            <li><a href="#">이용내역조회</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
         </header>
         <section id="slide">
             <ul class="imglist">
@@ -90,18 +92,20 @@
             </div>
         </section>
         <footer>
-            <div class="bt-logo">
-                <a href="#"><img src="images/logo.png" alt="btlogo"></a>
-            </div>
-            <div class="bt-wrap">
-                <nav class="bt-menu">
-                    <ul>
-                        <li><a href="#">하단메뉴1</a></li>
-                        <li><a href="#">하단메뉴2</a></li>
-                        <li><a href="#">하단메뉴3</a></li>
-                    </ul>
-                </nav>
-                <div class="copyright">COPYRIGHTⓒ by WEBDESIGN. ALL RIGHTS RESERVED</div>
+            <div class="f-wrap">
+                <div class="bt-logo">
+                    <a href="#"><img src="images/logo.png" alt="btlogo"></a>
+                </div>
+                <div class="bt-wrap">
+                    <nav class="bt-menu">
+                        <ul>
+                            <li><a href="#">하단메뉴1</a></li>
+                            <li><a href="#">하단메뉴2</a></li>
+                            <li><a href="#">하단메뉴3</a></li>
+                        </ul>
+                    </nav>
+                    <div class="copyright">COPYRIGHTⓒ by WEBDESIGN. ALL RIGHTS RESERVED</div>
+                </div>
             </div>
         </footer>
     </div>
